--- a/TestNGFrameWork/test-output/old/Default suite/methods-not-run.html
+++ b/TestNGFrameWork/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.bit.test.RegressionTest.m1</td></tr>
-<tr><td>com.bit.test.RegressionTest.m2</td></tr>
+<tr><td>com.ReadData.test1</td></tr>
 </table>
