--- a/TestNGFrameWork/test-output/emailable-report.html
+++ b/TestNGFrameWork/test-output/emailable-report.html
@@ -8,22 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">anything</th></tr>
-<tr><td><a href="#t0">jaichatai1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">3,057</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">jaichatai</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">5,436</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">1</th><th class="num">8,493</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">48</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">anything</th></tr></tbody><tbody id="t0"><tr><th colspan="4">jaichatai1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bit.test.SmokeTest</td><td><a href="#m0">m1</a></td><td rowspan="1">1556150828717</td><td rowspan="1">1646</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">jaichatai &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.bit.test.RegressionTest</td><td><a href="#m1">m2</a></td><td rowspan="1">1556150828882</td><td rowspan="1">1080</td></tr><tr><th colspan="4">jaichatai &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bit.test.SmokeTest</td><td><a href="#m2">m1</a></td><td rowspan="1">1556150831179</td><td rowspan="1">1620</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.ReadData</td><td><a href="#m0">readTxt</a></td><td rowspan="1">1556752017059</td><td rowspan="1">29</td></tr></tbody>
 </table>
-<h2>jaichatai1</h2><h3 id="m0">com.bit.test.SmokeTest#m1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">nevigate to url</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>jaichatai</h2><h3 id="m1">com.bit.test.RegressionTest#m2</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">nevigate to url</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
-	at com.bit.test.RegressionTest.m2(RegressionTest.java:31)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.bit.test.SmokeTest#m1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">nevigate to url</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.ReadData#readTxt</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
