--- a/TestNGFrameWork/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNGFrameWork/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterClass()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterMethod()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>48</td> <td title="&lt;&lt;BaseTest.afterSuite()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>1</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.afterTest()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeClass()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeMethod()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeMethod()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-47</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/04/24 18:27:54</td>   <td>-40</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>19/04/24 18:27:54</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionTest.fjhg(java.lang.Integer, java.lang.String)[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">fjhg</td> 
-  <td>main@239465106</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>19/04/24 18:27:54</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionTest.fjhg(java.lang.Integer, java.lang.String)[pri:0, instance:com.bit.test.RegressionTest@ae45eb6]">fjhg</td> 
-  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>19/05/01 19:06:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadData.readTxt()[pri:0, instance:com.ReadData@1e88b3c]">readTxt</td> 
+  <td>main@1440047379</td>   <td></td> </tr>
 </table>
