--- a/TestNGFrameWork/test-output/old/Default suite/methods.html
+++ b/TestNGFrameWork/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbd876">  <td>19/05/01 19:06:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadData.readTxt()[pri:0, instance:com.ReadData@1e88b3c]">readTxt</td> 
-  <td>main@1440047379</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/05/20 17:04:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GridPractice.grid1()[pri:0, instance:com.bit.test.grid.GridPractice@5c3bd550]">grid1</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="8bcfcb">  <td>19/05/20 17:04:41</td>   <td>3146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GridPractice.grid2()[pri:0, instance:com.bit.test.grid.GridPractice@5c3bd550]">grid2</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
 </table>
